<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="calculator_text">0</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="Divide">/</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="Multiply">*</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="Subtract">-</string>
    <string name="num0">0</string>
    <string name="btnCLR">CLR</string>
    <string name="Plus">+</string>
    <string name="Equal">=</string>
    <string name="Dot">.</string>

</resources>